--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Formulário de cadastro</title>
 </head>
 <body>
+    <h1>Formulário de cadastro</h1>
     <form action="#" method="post" id="cadastroForm">
 
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
+        <br>
         <label for="email">E-mail:</label>
         <input type="text" id="email" name="email" required>
+        <br>
         <label for="senha">Senha:</label>
         <input type="password" id="senha" name="senha" required>
-
+        <br>
         <button type="submit">Cadastrar</button>
     </form>
 </body>
